[gd_scene load_steps=4 format=3 uid="uid://djq1jclsoafd2"]

[ext_resource type="Script" path="res://internal/scenes/title/title.gd" id="1_1n3hs"]
[ext_resource type="TileSet" uid="uid://cb74ypis1pp00" path="res://internal/tiles/terrain.tres" id="2_f578q"]
[ext_resource type="Theme" uid="uid://d1kbq1nrnibof" path="res://internal/scenes/theme.tres" id="3_iv8fd"]

[node name="Title" type="Node"]
script = ExtResource("1_1n3hs")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_f578q")
format = 2
layer_0/tile_data = PackedInt32Array(393232, 65536, 0, 458768, 0, 0, 524304, 65536, 0, 589840, 0, 0, 655376, 0, 0, 720912, 0, 0, 786448, 65536, 0, 393233, 65536, 0, 458769, 65536, 0, 524305, 65536, 0, 589841, 65536, 0, 655377, 65536, 0, 720913, 65536, 0, 786449, 65536, 0, 393235, 65536, 0, 458771, 65536, 0, 524307, 65536, 0, 589843, 65536, 0, 655379, 65536, 0, 720915, 65536, 0, 786451, 65536, 0, 393236, 65536, 0, 458772, 0, 1, 524308, 0, 0, 589844, 0, 0, 655380, 0, 0, 720916, 0, 0, 786452, 65536, 0, 393237, 65536, 0, 458773, 0, 0, 524309, 65536, 0, 589845, 65536, 0, 655381, 65536, 0, 720917, 0, 0, 786453, 65536, 0, 393239, 65536, 0, 458775, 0, 0, 524311, 0, 0, 589847, 0, 0, 655383, 0, 0, 720919, 0, 0, 786455, 65536, 0, 393240, 65536, 0, 458776, 65536, 0, 524312, 65536, 0, 589848, 65536, 0, 655384, 65536, 0, 720920, 65536, 0, 786456, 65536, 0, 393242, 65536, 0, 458778, 65536, 0, 524314, 65536, 0, 589850, 65536, 0, 655386, 65536, 0, 720922, 65536, 0, 786458, 65536, 0, 393243, 65536, 0, 458779, 0, 0, 524315, 0, 0, 589851, 0, 0, 655387, 0, 0, 720923, 0, 0, 786459, 65536, 0, 393244, 65536, 0, 458780, 65536, 0, 524316, 65536, 0, 589852, 0, 0, 655388, 65536, 0, 720924, 65536, 0, 786460, 65536, 0, 393246, 65536, 0, 458782, 0, 0, 524318, 65536, 0, 589854, 65536, 0, 655390, 65536, 0, 720926, 0, 1, 786462, 65536, 0, 393247, 65536, 0, 458783, 65536, 0, 524319, 65536, 0, 655391, 65536, 0, 720927, 65536, 0, 786463, 65536, 0, 393249, 65536, 0, 458785, 65536, 0, 524321, 65536, 0, 589857, 65536, 0, 655393, 65536, 0, 720929, 65536, 0, 786465, 65536, 0, 393250, 65536, 0, 458786, 0, 1, 524322, 0, 0, 589858, 0, 0, 655394, 0, 0, 720930, 0, 0, 786466, 65536, 0, 393251, 65536, 0, 458787, 0, 0, 524323, 65536, 0, 655395, 65536, 0, 720931, 0, 0, 786467, 65536, 0, 393253, 65536, 0, 458789, 0, 0, 524325, 0, 0, 589861, 0, 0, 655397, 0, 0, 720933, 0, 0, 786469, 65536, 0, 393254, 65536, 0, 458790, 65536, 0, 524326, 65536, 0, 589862, 65536, 0, 655398, 65536, 0, 720934, 65536, 0, 786470, 65536, 0, 393256, 65536, 0, 458792, 65536, 0, 524328, 65536, 0, 589864, 65536, 0, 655400, 65536, 0, 720936, 65536, 0, 786472, 65536, 0, 393257, 65536, 0, 458793, 0, 0, 524329, 0, 0, 589865, 0, 0, 655401, 0, 0, 720937, 0, 1, 786473, 65536, 0, 393258, 65536, 0, 458794, 0, 0, 524330, 65536, 0, 589866, 0, 0, 655402, 65536, 0, 720938, 0, 0, 786474, 65536, 0, 393260, 65536, 0, 458796, 65536, 0, 524332, 0, 0, 589868, 65536, 0, 655404, 0, 0, 720940, 65536, 0, 786476, 65536, 0, 458797, 65536, 0, 524333, 65536, 0, 589869, 65536, 0, 655405, 65536, 0, 720941, 65536, 0, 786477, 65536, 0, 393263, 65536, 0, 458799, 65536, 0, 524335, 65536, 0, 589871, 65536, 0, 655407, 65536, 0, 720943, 65536, 0, 786479, 65536, 0, 393264, 65536, 0, 458800, 0, 0, 524336, 0, 0, 589872, 0, 0, 655408, 0, 0, 720944, 0, 0, 786480, 65536, 0, 458801, 0, 0, 524337, 65536, 0, 589873, 0, 0, 655409, 65536, 0, 720945, 65536, 0, 786481, 65536, 0, 393267, 65536, 0, 458803, 0, 1, 524339, 0, 0, 589875, 0, 0, 655411, 0, 0, 720947, 0, 0, 786483, 65536, 0, 393268, 65536, 0, 458804, 65536, 0, 524340, 65536, 0, 589876, 65536, 0, 655412, 65536, 0, 720948, 65536, 0, 786484, 65536, 0, 393270, 65536, 0, 458806, 65536, 0, 524342, 65536, 0, 589878, 65536, 0, 655414, 65536, 0, 720950, 65536, 0, 786486, 65536, 0, 393271, 65536, 0, 458807, 0, 0, 524343, 0, 0, 589879, 0, 0, 655415, 0, 0, 720951, 0, 0, 786487, 65536, 0, 393272, 65536, 0, 458808, 65536, 0, 524344, 0, 0, 589880, 65536, 0, 655416, 65536, 0, 720952, 65536, 0, 786488, 65536, 0, 393274, 65536, 0, 458810, 0, 0, 524346, 0, 0, 589882, 0, 0, 655418, 0, 0, 720954, 0, 1, 786490, 65536, 0, 393275, 65536, 0, 458811, 65536, 0, 524347, 65536, 0, 589883, 65536, 0, 655419, 65536, 0, 720955, 65536, 0, 786491, 65536, 0, 393228, 65536, 0, 458764, 65536, 0, 524300, 65536, 0, 589836, 65536, 0, 655372, 65536, 0, 720908, 65536, 0, 786444, 65536, 0, 393229, 65536, 0, 458765, 0, 0, 524301, 0, 0, 589837, 0, 0, 655373, 65536, 0, 720909, 0, 1, 786445, 65536, 0, 393230, 65536, 0, 458766, 0, 0, 524302, 65536, 0, 589838, 0, 0, 655374, 65536, 0, 720910, 0, 0, 786446, 65536, 0, 393231, 65536, 0, 458767, 0, 0, 524303, 65536, 0, 589839, 0, 0, 655375, 65536, 0, 720911, 0, 0, 786447, 65536, 0, 393238, 65536, 0, 458774, 0, 0, 524310, 65536, 0, 589846, 65536, 0, 655382, 65536, 0, 720918, 0, 0, 786454, 65536, 0, 393245, 65536, 0, 458781, 65536, 0, 524317, 0, 0, 589853, 0, 0, 655389, 0, 0, 720925, 65536, 0, 786461, 65536, 0, 589859, 65536, 0, 393252, 65536, 0, 458788, 0, 0, 524324, 65536, 0, 589860, 65536, 0, 655396, 65536, 0, 720932, 0, 0, 786468, 65536, 0, 393259, 65536, 0, 458795, 0, 0, 524331, 65536, 0, 589867, 0, 0, 655403, 65536, 0, 720939, 0, 0, 786475, 65536, 0, 393265, 65536, 0, 393266, 65536, 0, 458802, 0, 0, 524338, 65536, 0, 589874, 0, 0, 655410, 65536, 0, 720946, 65536, 0, 786482, 65536, 0, 393273, 65536, 0, 458809, 65536, 0, 524345, 65536, 0, 589881, 0, 0, 655417, 65536, 0, 720953, 65536, 0, 786489, 65536, 0, 1048611, 196608, 0, 1048612, 65536, 1)

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.7
anchor_right = 0.5
anchor_bottom = 0.7
offset_left = -81.0
offset_top = -45.5
offset_right = 81.0
offset_bottom = 45.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_iv8fd")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("3_iv8fd")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ClassicWarning" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Please put the original classic.skb in the 
same directory as the game executable,
then restart the game."

[node name="StartClassic" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start Classic"

[node name="StartCustom" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start Custom
"

[node name="LevelEditor" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level Editor"

[node name="Controls" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="Exit to Desktop" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit to Desktop"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/StartClassic" to="." method="_on_start_classic_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/StartCustom" to="." method="_on_start_custom_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/LevelEditor" to="." method="_on_level_editor_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Exit to Desktop" to="." method="_on_quit_pressed"]
